--- a/oclp_mod/languages/it_IT.json
+++ b/oclp_mod/languages/it_IT.json
@@ -54,70 +54,70 @@
     "usb_expansion":"scheda di espansione USB 3.0 per bootare macOS.",
     "booting_nvme":"Sto facendo boot nell'NVWME",
     "support":"Supporto",
-    "Boot_interface_wait_time":"Boot interface wait time",
-    "when_deactive":"When deactivated, users can hold the ESC\nkey Display selector in the firmware.",
-    "Displaying_the_OpenCore_boot_interface":"Displaying the OC boot interface",
-    "description_digitaly_signin":"Digitally sign OpenCore to prevent Damage\nDestruction",
-    "Non-original_NVMe_drive":"Non-original NVMe drive",
-    "Protection_of_OpenCore_Digital_Signature" :"Protection of OC Digital Signature",
-    "OC_can_be_booted_from_the_NVMe_drive.":"OC can be booted from the NVMe drive.",
-    "Note:_Your_machine_must_support_NVMe.":"Note: Your machine must support NVMe.",
-    "In_a_system_without_native_support_activate":"In a system without native support, activate",
-    "On_the_boot_selector,_choose_default.":"On the boot selector, choose default.",
-    "Time_runs_out_a_second_before_entering.":"Time runs out a second before entering.",
-    "Setting_this_to_0_means_there_is_no_deadline.":"Setting this to 0 means there is no deadline.",
-    "MacPro3.1/Xserve2.1Solutions":"MacPro3.1/Xserve2.1 Solutions",
-    "Limitthemaximumnumberofthreadsonthisunitto4.":"Limit the maximum number of threads on this\nunit to 4.",
-    "RequiredformacOSSequoiaandnewerversions.":"Required for macOS Sequoia and newer versions.",
+    "Boot_interface_wait_time":"Attesa nell'interfaccia di boot",
+    "when_deactive":"Quando disattivato, puoi tener premuto ESC\n per andar nel Display selector nel firmware.",
+    "Displaying_the_OpenCore_boot_interface":"Mostro l'interfaccia di boot di ",
+    "description_digitaly_signin":"Firma digitalmente OpenCore per prevenire di non danneggiarlo",
+    "Non-original_NVMe_drive":"SSD NVMe non originale",
+    "Protection_of_OpenCore_Digital_Signature" :"Protezione della firma digitale di OC",
+    "OC_can_be_booted_from_the_NVMe_drive.":"OC può far boot dagli NVMe.",
+    "Note:_Your_machine_must_support_NVMe.":"Nota: Il tuo pc deve supportare gli NVMe.",
+    "In_a_system_without_native_support_activate":"In un sistema che non li supporta nativamento, attivalo",
+    "On_the_boot_selector,_choose_default.":"Nel selettore di boot, scegli default.",
+    "Time_runs_out_a_second_before_entering.":"Il tempo scade un secondo prima dell'ingresso.",
+    "Setting_this_to_0_means_there_is_no_deadline.":"Se lo imposti a 0 non ci sarà una deadline.",
+    "MacPro3.1/Xserve2.1Solutions":"Soluzioni per MacPro3.1/Xserve2.1",
+    "Limitthemaximumnumberofthreadsonthisunitto4.":"Limita il numero massimo di threads da \nunit a 4.",
+    "RequiredformacOSSequoiaandnewerversions.":"Richiesto da macOS Sequoia e sucessivi.",
     "Debugging":"Debugging",
-    "verbose_debug":"Verbose mode",
-    "debug_version_driver":"Debug version driver",
-    "Additional":"Additional",
-    "Universal(effectivesustainability)":"Universal (effective sustainability)",
-    "debugging_OpenCore_version":"debugging OpenCore version",
-    "Use_the_DEBUG_version":"Use the DEBUG version of OpenCore,\nand enable additional kernel logging.",
-    "use_debug":"Use the DEBUG version of the kext, and enable additional kernel logging.",
-    "Outputverboseinformationupon_startup":"Output verbose information upon startup",
-    "Target_model":"Target model",
-    "Host_model":"Host model",
-    "Applicable_only_to_BCM943224,_331,":"Applicable only to BCM943224, 331,",
-    "360and3602chipsets.":"360 and 3602 chipsets.",
-    "Disable_Thunder":"Disable Thunder",
-    "Disable_CPUFriend":"Disable CPUFriend",
-    "Photos,this_may_delay.":"Photos, this may delay.",
-    "CPU_usage":"CPU usage",
-    "SATA_power_management":"SATA Power Management",
-    "NVMepowermanagement":"NVME Power Management",
-    "Third-partySATApowermanagement":"3P SATA Power Management",
-    "RegardingiCloudusing3802-BasedGPUs":"Regarding iCloud using 3802-Based GPUs",
-    "Disablethemediaanalysisdservice":"Disable the mediaanalysisd service",
-    "DisableCPUFriendforunsupportedmodels.":"Disable CPUFriend for unsupported models.",
-    "Regarding_the_malfunction":"Regarding the malfunction",
-    "Allow_exposing_iGPU_in_Windows":"Allow exposing iGPU in Windows",
-    "UsedfordGPU-basedMacBooks":"Used for dGPU-based MacBooks",
-    "DisabledondowngradedNVRAMsystem.":"Disabled on downgraded NVRAM system.",
-    "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH may occasionally crash on\nMacBook Pro 11,x.",
-    "Causes_performance_degradation":"Causes performance degradation",
-    "Allow_the_use_of_AppleALC_audio":"Allow the use of AppleALC audio",
-    "WritetoNVRAM":"Write to NVRAM",
-    "Trim_related":"Trim related",
-    "DownloadthemacOSinstaller(.app)":"Download the macOS installer (.app)",
-    "Selectthelocalinstaller(.app)":"Select the local installer (.app)",
-    "Downloadthethree-partitionimage(.dmg)":"Download the three-partition image (.dmg)",
-    "BurnDMGimage(.dmg)":"Burn DMG image (.dmg)",
-    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSDs may also benefit from disabling this\nfeature.",
-    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"It is recommended that all users use it, even if\nthere are issues.",
-    "Third-partyNVMepowermanagement":"3P NVMe Power Management",
-    "EnableunprovidedfeaturesinmacOS":"Enable unprovided features in macOS",
-    "AllowOpenCoretowritetoNVRAM.":"Allow OpenCore to write to NVRAM.",
-    "Incaseoramalfunctionor":"In case of a malfunction or",
-    "CreateamacOSinstaller":"Create a macOS installer",
-    "FindalocalmacOSinstaller":"Find a local macOS installer",
-    "SelectSimpleHacDMGimage" :"Select SimpleHac DMG image",
-    "Download":"Download",
-    "The_macOS_installer_has_been_successfully_created!":"The macOS installer has been successfully created!",
-    "DownloadtheselectedDMG":"Download the selected DMG",
-    "Copy_link":"Copy link",
+    "verbose_debug":"Modalità Verbose",
+    "debug_version_driver":"Debug versione dei driver",
+    "Additional":"Addizionali",
+    "Universal(effectivesustainability)":"Universale (sostenibilità effettiva)",
+    "debugging_OpenCore_version":"Eseguo il debug della versione di OpenCore",
+    "Use_the_DEBUG_version":"Usa la versione DEBUG di OpenCore,\ned abilita logging del kernel.",
+    "use_debug":"Usa la versione di DEBUG dei kext, ed abilita logging del kernel.",
+    "Outputverboseinformationupon_startup":"Mostra info verbose fino all'avvio",
+    "Target_model":"Modello Destinazione",
+    "Host_model":"Modello Host",
+    "Applicable_only_to_BCM943224,_331,":"Applicabile solo su BCM943224, 331,",
+    "360and3602chipsets.":"chipset 360 e 3602.",
+    "Disable_Thunder":"Disabilita Thunder",
+    "Disable_CPUFriend":"Disablita CPUFriend",
+    "Photos,this_may_delay.":"Foto, questo può rallentare.",
+    "CPU_usage":"Utilizzo della CPU",
+    "SATA_power_management":"Gestione Consumo SATA",
+    "NVMepowermanagement":"Gestione Consumo NVME",
+    "Third-partySATApowermanagement":"Gestione Consumo 3P SATA",
+    "RegardingiCloudusing3802-BasedGPUs":"Riguardo iCloud usando GPU basate su 3802",
+    "Disablethemediaanalysisdservice":"Disablita il servizio mediaanalysisd",
+    "DisableCPUFriendforunsupportedmodels.":"Disablita CPUFriend per i modelli non supportati.",
+    "Regarding_the_malfunction":"Riguarda il malfunzionamento",
+    "Allow_exposing_iGPU_in_Windows":"Abilita esposizione iGPU in Windows",
+    "UsedfordGPU-basedMacBooks":"Usato per i MacBook con dGPU",
+    "DisabledondowngradedNVRAMsystem.":"Disabilitato nei sistemi downgraded NVRAM.",
+    "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH potrebbe crashare su\nMacBook Pro 11,x.",
+    "Causes_performance_degradation":"Causa degradazione sulle prestazioni",
+    "Allow_the_use_of_AppleALC_audio":"Usa AppleALC audio",
+    "WritetoNVRAM":"Scrivi su NVRAM",
+    "Trim_related":"Taglio relativo",
+    "DownloadthemacOSinstaller(.app)":"Scarica l'installer di macOS (.app)",
+    "Selectthelocalinstaller(.app)":"Scegli l'installer locale (.app)",
+    "Downloadthethree-partitionimage(.dmg)":"Scarica l'immagine a 3 partizioni (.dmg)",
+    "BurnDMGimage(.dmg)":"Brucia immagine DMG (.dmg)",
+    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSDs potrebbero avere benefucu disabilitando queste\nfunzioni.",
+    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"È consigliato a tutti di usarlo, sempre se\nnon ci son problemi.",
+    "Third-partyNVMepowermanagement":"Gestione Consumo 3P NVMe",
+    "EnableunprovidedfeaturesinmacOS":"Abilita funzioni non date da macOS",
+    "AllowOpenCoretowritetoNVRAM.":"Permetti a OpenCore di scrivere sulla NVRAM.",
+    "Incaseoramalfunctionor":"In caso di malfunzionamento o di",
+    "CreateamacOSinstaller":"Crea un macOS installer",
+    "FindalocalmacOSinstaller":"Cerca un macOS installer",
+    "SelectSimpleHacDMGimage" :"Scegli immagine SimpleHac",
+    "Download":"Scarica",
+    "The_macOS_installer_has_been_successfully_created!":"L'installer di macOS è stato creato!",
+    "DownloadtheselectedDMG":"Scarica il DMG selezionato",
+    "Copy_link":"Copia link",
     "Download_the_image_from_SimpleHac_OSS":"Download the image from SimpleHac OSS",
     "Download_the_selected_macOS":"Download the selected macOS",
     "Choose_this_macOS":"Choose this macOS",
