--- a/oclp_mod/languages/it_IT.json
+++ b/oclp_mod/languages/it_IT.json
@@ -118,35 +118,35 @@
     "The_macOS_installer_has_been_successfully_created!":"L'installer di macOS è stato creato!",
     "DownloadtheselectedDMG":"Scarica il DMG selezionato",
     "Copy_link":"Copia link",
-    "Download_the_image_from_SimpleHac_OSS":"Download the image from SimpleHac OSS",
-    "Download_the_selected_macOS":"Download the selected macOS",
-    "Choose_this_macOS":"Choose this macOS",
-    "Show_old_version/test_version":"Show old version/test version",
-    "Choose_the_macOS_installer":"Choose the macOS installer",
-    "Copy_the_download_link_of_the_selected_DMG.":"Copy the download link of the selected DMG.",
-    "ChoosethisimagesupportedbySimpleHac":"Choose this image supported by SimpleHac",
-    "LookingfordownloadableDMGimages":"Looking For Downloaded",
-    "Searchingforavailabledownloadableversions.":"Searching",
-    "Copied_to_clipboard":"Copied to clipboard",
-    "Error":"Error",
-    "No_patch_needed":"No patch needed",
-    "unable_to_install_patch":"Unable to install the patch, reason: ",
-    "All_patches_have_been_installed.":"All patches have been installed.",
-    "Install_driver_patch" :"Install driver patch",
-    "Scan_again":"Scan again",
-    "No_available_hard_disk_found.":"No available hard disk found.",
-    "The_selected_USB_drive_will_be_formatted!":"The selected USB drive will be formatted!",
-    "Select_local_hard_drive":"Select local hard drive",
-    "Retrieve_local_hard_drive_information":"Retrieve local hard drive information",
-    "it_seems":"It seems that there is no installer in the application folder.",
-    "Select_the_local_macOS_installer":"Select the local macOS installer",
-    "due_to":"Due to busy studies, this part is not finished (gui_simplehac_dmg_flash.py is an incomplete product), please download etcher to burn it yourself! Now opening SimpleHac accelerated image to download etcher for you.",
-    "Selected_the_directory":"Selected the directory",
-    "Select_save_directory":"Select save directory",
-    "written":"Written: 0.00 MB",
-    "Version":"Version",
-    "kdk_download":"KDK Download",
-    "Retrieving_KDK_information...":"Retrieving KDK information...",
+    "Download_the_image_from_SimpleHac_OSS":"Scarica l'immagine da SimpleHac OSS",
+    "Download_the_selected_macOS":"Scarica il macOS selezionato",
+    "Choose_this_macOS":"Scegli questo macOS",
+    "Show_old_version/test_version":"Mostra versioni vecchie/test",
+    "Choose_the_macOS_installer":"Scegli l'installer di macOS",
+    "Copy_the_download_link_of_the_selected_DMG.":"Copia il link del download del DMG selezionato.",
+    "ChoosethisimagesupportedbySimpleHac":"Scegli quest'immagine supportata da SimpleHac",
+    "LookingfordownloadableDMGimages":"Cerco scaricati",
+    "Searchingforavailabledownloadableversions.":"Cerco",
+    "Copied_to_clipboard":"Copiato negli appunti",
+    "Error":"Errore",
+    "No_patch_needed":"Nessuna patch necessaria",
+    "unable_to_install_patch":"Impossibile installare la patch, motivo: ",
+    "All_patches_have_been_installed.":"Tutte le patch sono state aggiornate.",
+    "Install_driver_patch" :"Installa patch driver",
+    "Scan_again":"Scansiona di nuovo",
+    "No_available_hard_disk_found.":"Nessun disco trovato.",
+    "The_selected_USB_drive_will_be_formatted!":"La USB selezionata verrà formattata!",
+    "Select_local_hard_drive":"Scegli disco locale",
+    "Retrieve_local_hard_drive_information":"Ricevi info sul disco locale",
+    "it_seems":"Sembra che non ci sia l'installer.",
+    "Select_the_local_macOS_installer":"Scegli l'installer locale di macOS",
+    "due_to":"Da studi impegnati, questa parte non è finita (gui_simplehac_dmg_flash.py è incompleto), scarica etcher per masterizzartelo da solo! Ora aprendo l'immagine accellerata di SimpleHac per scaricare etcher per te.",
+    "Selected_the_directory":"Directory scelta",
+    "Select_save_directory":"Scegli directory di salvataggio",
+    "written":"Scritti: 0.00 MB",
+    "Version":"Versione",
+    "kdk_download":"Scarica KDK",
+    "Retrieving_KDK_information...":"Ricevo infd KDK...",
     "remove_the_installer_patch":"Remove the installed patches",
     "Start_installing_the_driver_patch":"Start installing the driver patch",
     "last_patch_installation_time":"Last patch installation time:",
