--- a/oclp_mod/languages/it_IT.json
+++ b/oclp_mod/languages/it_IT.json
@@ -146,42 +146,42 @@
     "written":"Scritti: 0.00 MB",
     "Version":"Versione",
     "kdk_download":"Scarica KDK",
-    "Retrieving_KDK_information...":"Ricevo infd KDK...",
-    "remove_the_installer_patch":"Remove the installed patches",
-    "Start_installing_the_driver_patch":"Start installing the driver patch",
-    "last_patch_installation_time":"Last patch installation time:",
-    "Installable_patches":"Installable patches",
-    "Settings":"Settings",
-    "Verification":"Verification",
-    "matching_available_patch":"Matching available patches for installation",
-    "verifying_the_installer":"Verifying the installer...",
-    "Theinstallerwascreatedsuccessfully.DoyouwanttocontinueandinstallOpenCoreon_this_disk?":"The installer was created successfully. Do you want to continue and install OpenCore on this disk?",
-    "this_installer_has_been_created":"The installer has been created successfully! If you want to install OpenCore to this USB, you need to change the target model in the settings.",
-    "the_macos_installer-has_been_succesfully":"The macOS installer has been successfully created!",
-    "devending":"Depending on the device speed, it may take 30 minutes or even longer.",
-    "you_can_go_to_other_things":"You can go do other things, such as checking out the SimpleHac resource community, and it will remind you when you finish.",
-    "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Failed to obtain DMG information, please contact laobamac.",
-    "Unable_to_find_the_download_link.":"Unable to find the download link.",
-    "AllowAppleALCtomanageaudioifapplicable.":"Allow AppleALC to manage audio if applicable.",
-    "DisabledonlywhenthehostlackstheGOPROM.":"Disabled only when the host lacks the\nGOP ROM.",
-    "Themodelthatthepatcherisgoingtoimitate.":"The model that the patcher is going to imitate.",
-    "Disabled_by_default":"Disabled by default, as it may occur from the\nwake state on certain systems.",
-    "enable_fireware_driver":"Enable FireWire Driver",
-    "Various_kinds":"Various kinds",
-    "Disable_Firmware_Throttling":"Disable Firmware Throttling",
-    "Caused_by_lack_of_hardware":"Caused by lack of hardware",
-    "Forexample,missingmonitors,batteries,etc.":"For example, missing monitors, batteries, etc.",
-    "Disable_firmware-based_restrictions":"Disable firmware-based restrictions",
+    "Retrieving_KDK_information...":"Ricevo info KDK...",
+    "remove_the_installer_patch":"Rimuovi le patch installate",
+    "Start_installing_the_driver_patch":"Comincia ad installare le driver patch",
+    "last_patch_installation_time":"Ultima installazione delle patch:",
+    "Installable_patches":"Patch installabili",
+    "Settings":"Impostazioni",
+    "Verification":"Verificazione",
+    "matching_available_patch":"Combino le patch disponibili per installazione",
+    "verifying_the_installer":"Verifico l'installer...",
+    "Theinstallerwascreatedsuccessfully.DoyouwanttocontinueandinstallOpenCoreon_this_disk?":"L'installer è stato creato. Vuoi continuare ed installare OpenCore nel disco?",
+    "this_installer_has_been_created":"L'installer è stato creato! Se vuoi installare OpenCore in questa USB, devi cambiare il modello nelle impostazioni.",
+    "the_macos_installer-has_been_succesfully":"L'installer di macOS è stato creato!",
+    "devending":"In base alla velocità del tuo dispositivo, potrebbe richiedere 30 minuti o di più.",
+    "you_can_go_to_other_things":"Puoi fare altre cose, come vedere la community di SimpleHac",
+    "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Impossibile ottenere info sul DMG, contatta laobamac.",
+    "Unable_to_find_the_download_link.":"Impossibile trovare il link del download.",
+    "AllowAppleALCtomanageaudioifapplicable.":"Permetti ad AppleALC di gestire l'audio se applicabile.",
+    "DisabledonlywhenthehostlackstheGOPROM.":"Disabilitato solo quando l'host manca la\nGOP ROM.",
+    "Themodelthatthepatcherisgoingtoimitate.":"Il modello che il patcher imiterà.",
+    "Disabled_by_default":"Disablitato di default, perché potrebbe accadere dall' \nacccendersi in certi sistemi.",
+    "enable_fireware_driver":"Abilita Driver FireWire",
+    "Various_kinds":"Vari Tipi",
+    "Disable_Firmware_Throttling":"Disabilita Limitazioni Firmware",
+    "Caused_by_lack_of_hardware":"Causato dalla mancanza di hardware",
+    "Forexample,missingmonitors,batteries,etc.":"Per esempio, assenza di monitor, batterie, ecc.",
+    "Disable_firmware-based_restrictions":"Disabilta restrizioni basate sul firmware",
     "Software_DeMUX":"Software DeMUX",
-    "Enable_software-based_DeMUX":"Enable software-based DeMUX",
-    "Note:Relevant_NVRAM_parameters_are_required:":"Note: Relevant NVRAM parameters are required:",
-    "Prevent_the_faulty_dGPU_from_being_enabled.":"Prevent the faulty dGPU from being enabled.",
-    "Enable_unsupported_features":"Enable unsupported features",
-    "Due_to_encountering_unstable_memory.":"Due to encountering unstable memory.",
-    "If_your_system_prompts_to_suggest_lowering":"If your system prompts to suggest lowering",
-    "Configure_FeatureUnlock_level.":"Configure FeatureUnlock level.",
-    "Sleep_Plan":"Sleep Plan",
-    "Graphics_card":"Graphics card",
+    "Enable_software-based_DeMUX":"Abilita base software DeMUX",
+    "Note:Relevant_NVRAM_parameters_are_required:":"Attenzione: Parametri NVRAM sono richiesti:",
+    "Prevent_the_faulty_dGPU_from_being_enabled.":"Evita che la dGPU venga abilitata.",
+    "Enable_unsupported_features":"Abilita funzioni non supportate",
+    "Due_to_encountering_unstable_memory.":"Incontrando memoria instabile.",
+    "If_your_system_prompts_to_suggest_lowering":"Se il sistema ti suggerisce di abbassare",
+    "Configure_FeatureUnlock_level.":"Configura livello di FeatureUnlock",
+    "Sleep_Plan":"Piano di Spegnimento",
+    "Graphics_card":"Scheda grafica",
     "AMD_GOP_injection":"AMD GOP injection",
     "Inject_AMD_GOP_to_display":"Inject AMD GOP to display",
     "Start_screen":"Start screen",
