--- a/oclp_mod/languages/it_IT.json
+++ b/oclp_mod/languages/it_IT.json
@@ -182,90 +182,90 @@
     "Configure_FeatureUnlock_level.":"Configura livello di FeatureUnlock",
     "Sleep_Plan":"Piano di Spegnimento",
     "Graphics_card":"Scheda grafica",
-    "AMD_GOP_injection":"AMD GOP injection",
-    "Inject_AMD_GOP_to_display":"Inject AMD GOP to display",
-    "Start_screen":"Start screen",
-    "Nvidia_GOP_injection":"Nvidia GOP injection",
-    "Inject_Nvidia_Kepler_GOP_for_sisplay":"Inject Nvidia Kepler GOP for display",
-    "Graphics_card_overwrite":"Graphics card overwrite",
-    "Applicable_to_MXM-based_iMacs.":"Applicable to MXM-based iMacs.",
-    "Cover_detected/hypothetical_MXM_graphics_card":"Cover detected/hypothetical MXM\ngraphics card",
-    "Booting_from_an_external_hard_drive":"Booting from an external hard drive",
-    "Note:This_may_interrupt_from":"Note: This may interrupt from",
-    "Prevent_sleep_issues":"Prevent sleep issues",
-    "Load_only_the_minimum_EFI_drivers":"Load only the minimum EFI drivers",
-    "Applicable_to_MacBookPro8,2_and_MacBookPro8,3.":"Applicable to\nMacBookPro8,2 And MacBookPro8,3.",
-    "Security":"Security",
-    "Kernel_Security":"Kernel Security",
-    "When_the_system_files_are_needed":"When the system files are needed",
-    "Disable_AMFI":"Disable AMFI",
-    "Model_Replacement":"Model Replacement",
-    "Safe_boot_model":"Safe boot model",
-    "Reverse_corresponds_to":"Reverse corresponds to",
-    "Current_set_SIP:":"Current set SIP:",
-    "Currently_started_SIP:":"Currently started SIP:",
+    "AMD_GOP_injection":"Iniezione AMD GOP",
+    "Inject_AMD_GOP_to_display":"Inietta AMD GOP nel display",
+    "Start_screen":"Mostra screen",
+    "Nvidia_GOP_injection":"Iniezione Nvidia GOP",
+    "Inject_Nvidia_Kepler_GOP_for_sisplay":"Inietta Nvidia Kepler GOP per display",
+    "Graphics_card_overwrite":"Svovrascrivi scheda video",
+    "Applicable_to_MXM-based_iMacs.":"Applicabile negli iMac basati su MXM.",
+    "Cover_detected/hypothetical_MXM_graphics_card":"Cover rilevata/ipotetica \n scheda grafica MXM",
+    "Booting_from_an_external_hard_drive":"Fai boot da un disco esterno",
+    "Note:This_may_interrupt_from":"Attenzione: Questo può essere interrotto da",
+    "Prevent_sleep_issues":"Evita problemi di spegnimento",
+    "Load_only_the_minimum_EFI_drivers":"Carica solo i driver EFI necessari",
+    "Applicable_to_MacBookPro8,2_and_MacBookPro8,3.":"Applicabile a\nMacBookPro8,2 e MacBookPro8,3.",
+    "Security":"Sicurezza",
+    "Kernel_Security":"Sicurezza del Kernel",
+    "When_the_system_files_are_needed":"Quando i file di sistemi sono necessari",
+    "Disable_AMFI":"Disabilta AMFI",
+    "Model_Replacement":"Sovrascrivi Modello",
+    "Safe_boot_model":"Modello Safe boot",
+    "Reverse_corresponds_to":"Invertito corrisponde a",
+    "Current_set_SIP:":"SIP impostata:",
+    "Currently_started_SIP:":"SIP Attuale:",
     "System_Integrity_Protection_(SIP)":"System Integrity Protection (SIP)",
-    "Set_Apple_Secure_Boot_Model_Identifier":"Set Apple Secure Boot Model Identifier",
-    "Note:Incompatible_with_driver_patches":"Note: Incompatible with driver patches",
-    "If_it_has_been_counterfeited,then_match_the_T2_model.":"If it has been counterfeited, then match the T2 model.",
-    "Disable_resource_library_validation":"Disable resource library validation",
-    "SMBIOS_Replacement_Level":"SMBIOS Replacement Level",
-    "None":"None",
-    "Minimal":"Minimal",
-    "Moderate":"Moderate",
-    "Supported_levels:" : "Supported levels:",
-    "- None:_None":"- None: None",
-    "- Small:_Board_ID.":"- Small: Board ID.",
-    "- Inside:_Change_Model.":"- Inside: Change Model.",
-    "- Height:_Change_model_and_serial.":"- Height: Change model and serial.",
-    "SMBIOS_Model_Replacement":"SMBIOS Model Replacement",
-    "Prepare_a_fake_model":"Prepare a fake model",
+    "Set_Apple_Secure_Boot_Model_Identifier":"Imposta Modello Apple Secure Boot",
+    "Note:Incompatible_with_driver_patches":"Attenzione: Incompatibile con le driver patches",
+    "If_it_has_been_counterfeited,then_match_the_T2_model.":"Se è stato contraffatto, poi unisce il modello T2.",
+    "Disable_resource_library_validation":"Disabilita validazione librerie",
+    "SMBIOS_Replacement_Level":"SMBIOS Livello di Sovrascrizione",
+    "None":"Nessuno",
+    "Minimal":"Minimale",
+    "Moderate":"Moderato",
+    "Supported_levels:" : "Livelli supportati:",
+    "- None:_None":"- Nessuno: Nessuno",
+    "- Small:_Board_ID.":"- Piccolo: ID Scheda.",
+    "- Inside:_Change_Model.":"- Dentro: Cambia Modello.",
+    "- Height:_Change_model_and_serial.":"- Altezza: Cambia modello e seriale.",
+    "SMBIOS_Model_Replacement":"SMBIOS Modello di Sovrascrizione",
+    "Prepare_a_fake_model":"Prepara un modello falso",
     "Default":"Default",
-    "Supported_Mac.":"Supported Mac.",
-    "Mainly_used_to_activate":"Mainly used to activate",
-    "Serial_number_overwrite":"Serial number overwrite",
-    "Patching":"Patching",
-    "Patch_root_directory":"Patch root directory",
-    "TeraScale_2_Acceleration":"TeraScale 2 Acceleration",
-    "Activating_AMD_TeraScale_2_GPU":"Activating AMD TeraScale 2 GPU",
-    "On_the_MacBookPro8,2_and":"On the MacBookPro8,2 and",
-    "Acceleration_on_MacBookPro8,3.":"Acceleration on MacBookPro8,3.",
-    "This_is_disabled_by_default_because":"This is disabled by default because",
-    "Universal_Control_on_unsupported_Mac":"Universal Control on unsupported Mac",
-    "Enables_replacement_of_natively_supported_Macs":"Enables replacement of natively supported Macs",
-    "Allow_OpenCore_to_mimic_native":"Allow OpenCore to mimic native",
-    "Allowed_on_Tahoe_system_and_above":"Allowed on Tahoe system and above",
-    "With_AppleALC.kext":"With AppleALC.kext",
-    "Installing_USB_Legacy_Environment_Extension":"Installing USB Legacy Environment Extension",
-    "Allow_the_installation_of_the_old_USB_environment_extension_patch":"Allow the installation of the old USB environment extension patch.",
-    "Activate_the_AppleHDA_driver_for_the_sound_card":"Activate the AppleHDA driver for the sound card",
-    "Allow_the_installation_of_the_old_HDA_environment_extension_patch":"Allow the installation of the old HDA environment extension patch",
-    "This_GPU_model_has_common_failures.":"This GPU model has common failures.",
-    "After_injecting_modifications_while_patching":"After injecting modifications while patching",
-    "Non-Metal_Configuration":"Non-Metal Configuration",
-    "Dark_Mode_Menu":"Dark Mode Menu",
-    "change":"Change",
+    "Supported_Mac.":"Mac Supportato.",
+    "Mainly_used_to_activate":"Usato di solito per attivare",
+    "Serial_number_overwrite":"Sovrascrivi numero seriale",
+    "Patching":"Sto eseguendo la patch",
+    "Patch_root_directory":"Directory patch root",
+    "TeraScale_2_Acceleration":"Accelerazione TeraScale 2",
+    "Activating_AMD_TeraScale_2_GPU":"Attivo AMD TeraScale 2 GPU",
+    "On_the_MacBookPro8,2_and":"Nel MacBookPro8,2 e",
+    "Acceleration_on_MacBookPro8,3.":"Accelerazione nel MacBookPro8,3.",
+    "This_is_disabled_by_default_because":"Questo di default è disabilitato perché",
+    "Universal_Control_on_unsupported_Mac":"Controllo Universale sul Mac non supportato",
+    "Enables_replacement_of_natively_supported_Macs":"Abilita sovrascrizione nei Mac supportati nativamente",
+    "Allow_OpenCore_to_mimic_native":"Permetti ad OpenCore al mimic nativo",
+    "Allowed_on_Tahoe_system_and_above":"Permesso su Tahoe e successivi",
+    "With_AppleALC.kext":"Con AppleALC.kext",
+    "Installing_USB_Legacy_Environment_Extension":"Installo Estensione USB Legacy Environment",
+    "Allow_the_installation_of_the_old_USB_environment_extension_patch":"Permetti l'installazione del vecchio ambiente USB.",
+    "Activate_the_AppleHDA_driver_for_the_sound_card":"Attiva il driver AppleHDA per la scheda audio",
+    "Allow_the_installation_of_the_old_HDA_environment_extension_patch":"Permetti l'installazione del vecchio ambiente HDA",
+    "This_GPU_model_has_common_failures.":"Questo modello di GPU ha dei fallimenti comuni.",
+    "After_injecting_modifications_while_patching":"Dopo aver iniettato le modifiche mentre si esegue la patch",
+    "Non-Metal_Configuration":"Configurazione Non-Metal",
+    "Dark_Mode_Menu":"Menu Tema Scuro",
+    "change":"Cambia",
     "beta_blur":"Beta blur",
     "App":"App",
-    "General":"General",
-    "Beta_Menu_Bar":"Beta Menu Bar",
-    "Allow_native_models":"Allow native models",
-    "Control_the_application_of_widget_colors_on_the_desktop":"Control the application of widget\ncolors on the desktop",
-    "Disable_Beta_Rim":"Disable Beta Rim",
-    "Ignore_app_updates":"Ignore app updates",
-    "Disabled_Report":"Disabled Report",
-    "Statistics":"Statistics",
-    "Software_version":"Software version",
-    "Software_Information":"Software Information",
+    "General":"Generali",
+    "Beta_Menu_Bar":"Beta Barra Menu",
+    "Allow_native_models":"Permetti modelli nativi",
+    "Control_the_application_of_widget_colors_on_the_desktop":"Controlla l'applicazione dei colori\n nei widget nel desktop",
+    "Disable_Beta_Rim":"Disabilita Beta Rim",
+    "Ignore_app_updates":"Ignora aggiornamenti app",
+    "Disabled_Report":"Rapporto disabilitato",
+    "Statistics":"Statistiche",
+    "Software_version":"Versione software",
+    "Software_Information":"Info Software",
     "Patch_support_package_version":"Patch support package version",
-    "Software_Path":"Software Path",
-    "Software_loading":"Software loading",
-    "Startup_information":"Startup information",
-    "Hardware_Information":"Hardware Information",
-    "Remove_unused_KDK":"Remove unused KDK",
-    "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"When enabled, the application will remove\nunused KDKs from the system during root\ndirectory patching.",
-    "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"When enabled, the patch will not report any\ninformation to laobamac.",
-    "attention_this_option_should":"This option should only be used when your Mac natively supports the operating system you want to run.If you are currently running an unsupported operating system, this option will result in a boot failure.Switch to native Mac only to enable operating system features.Are you sure you want to continue?",
+    "Software_Path":"Percorso Software",
+    "Software_loading":"Carico software",
+    "Startup_information":"Info avvio",
+    "Hardware_Information":"Indo Hardware",
+    "Remove_unused_KDK":"Rimuovi KDK non usati",
+    "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"Quando abilitato, l'applicazione rimuoverà\ni KDK non usati dal sistema quando esegue\n la patch del root.",
+    "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"Quando abilitato, la patch non riporterà alcuna\ninfo a laobamac.",
+    "attention_this_option_should":"Quest'opzione dovrebbe essere usata solo quando il Mac supporta nativamente il sistema operativo che vuoi eseguire. Se stai eseguendo un sistema operativo non supportato, quest'optzione risulterà in un boot fallito. Passa a Mac nativo solo per abilitare le funzioni del sistema operativo. Vuoi continuare?",
     "Allows_the_installation_of_OpenCore":"Allows the installation of OpenCore on natively\nsupported Macs. Note that this will not allow\nunsupported macOS versions to be installed\non your system.",
     "Control_the_window_edge_rendering_effect":"Control the window edge rendering effect",
     "support_for_dynamic_color":"Support for dynamic color changes. Note:\nThis setting is still experimental. If you\nencounter any issues, please disable\nthis setting.",
