--- a/oclp_mod/languages/it_IT.json
+++ b/oclp_mod/languages/it_IT.json
@@ -266,74 +266,74 @@
     "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"Quando abilitato, l'applicazione rimuoverà\ni KDK non usati dal sistema quando esegue\n la patch del root.",
     "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"Quando abilitato, la patch non riporterà alcuna\ninfo a laobamac.",
     "attention_this_option_should":"Quest'opzione dovrebbe essere usata solo quando il Mac supporta nativamente il sistema operativo che vuoi eseguire. Se stai eseguendo un sistema operativo non supportato, quest'optzione risulterà in un boot fallito. Passa a Mac nativo solo per abilitare le funzioni del sistema operativo. Vuoi continuare?",
-    "Allows_the_installation_of_OpenCore":"Allows the installation of OpenCore on natively\nsupported Macs. Note that this will not allow\nunsupported macOS versions to be installed\non your system.",
-    "Control_the_window_edge_rendering_effect":"Control the window edge rendering effect",
-    "support_for_dynamic_color":"Support for dynamic color changes. Note:\nThis setting is still experimental. If you\nencounter any issues, please disable\nthis setting.",
-    "Note:May_use_more_CPU_resources.":"Note: May use more CPU resources.",
-    "Control_window_blur_behaviour.":"Control window blur behaviour.",
-    "Solution_to_load_the_cursor_(rainbow_circle)":"Solution to load the cursor (rainbow circle)",
-    "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"If the Beta menu bar is activated, the menu bar\ncolor will be dynamic as needed change.",
-    "Logout_is_required_to_apply_changes_to_SkyLight":"Logout is required to apply changes to SkyLight.",
-    "Downloading:":"Downloading:",
-    "Ready_to_download":"Ready to download",
-    "There_is_still":"There is still",
-    "center":"Center",
-    "Failed_to_retrieve_KDK_information:":"Failed to retrieve KDK information:",
-    "speed":"Speed",
-    "Loading":"Loading",
-    "Download_failed":"Download failed",
-    "Cancel_download":"Cancel download",
-    "at":"at",
-    "The_download_will_be_canceled,are_you_sure?":"The download will be canceled, are you sure?",
-    "Downloaded":"Downloaded",
-    "OCLP_resources":"OCLP resources",
-    "Available_resources:":"Available resources:",
-    "Official_Guide":"Official Guide",
-    "Official_support":"Official support",
-    "Official_Discord_community":"Official Discord community",
-    "language_support":"Language support",
-    "SimpleHac_Resource_Community":"SimpleHac Resource Community",
-    "No_patches_needed!Do_you_want_to_reboot_now_to_install_OpenCore?":"No patches needed!Do you want to reboot now to install OpenCore?",
-    "Downloading_KDK":"Downloading KDK",
-    "Metallib_download_failed":"Metallib download failed",
-    "Retrieve_the_KDK_database":"Retrieve the KDK database...",
-    "KDK_download_failed:":"KDK download failed:",
-    "Installing_Metallib:":"Installing Metallib:",
-    "Metallib_installation_failed:":"Metallib installation failed:",
-    "KDK_MD5_mismatch:":"KDK MD5 mismatch:",
-    "Downloading_Metal_Libraries":"Downloading Metal Libraries",
-    "Retrieve_MetallibSupportPkg_database...":"Retrieve MetallibSupportPkg database...",
-    "we_have_just_completed":"We have just completed the patch installation to the root volume!However, Apple requires users to manually approve the installed kernel extensions before they can be used the next time they restart.Do you want to open System Preferences?",
-    "Open_System_Preferences?":"Open System Preferences?",
-    "Open_system_settings":"Open system settings",
-    "Ignore":"Ignore",
-    "The_following_patches_will_be_installed:":"The following patches will be installed:",
-    "Failed_to_apply_any_patches.":"Failed to apply any patches.",
-    "Restore_to_the_most_recent_snapshot":"Restore to the most recent snapshot",
-    "Installing_driver_patch":"Installing driver patch",
-    "Uninstalling_driver_patch":"Uninstalling driver patch",
-    "Success":"Success",
-    "Guide":"Guide",
-    "System":"System",
+    "Allows_the_installation_of_OpenCore":"Permette l'installazione di OpenCore nei Mac\nnativamente supportati. Questo non permetterà\nversioni di macOS non supportate di esere installate\nnel tuo sistema.",
+    "Control_the_window_edge_rendering_effect":"Controlla il rendering delle finestre",
+    "support_for_dynamic_color":"Supporto per i colori dinamici. Attenzione:\nQuesto è ancora sperimentale. Se incontrerai\nproblemi, disabilita\nquest'opzione.",
+    "Note:May_use_more_CPU_resources.":"Attenzione: potrebbe usare più CPU.",
+    "Control_window_blur_behaviour.":"Controlla comportamento del blur delle finestre.",
+    "Solution_to_load_the_cursor_(rainbow_circle)":"Soluzione per caricare il cursore (cerchio arcobaleno)",
+    "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"Se la barra menu Beta è acttivata, il colore \ndella barra menu\nwsarà dinamico.",
+    "Logout_is_required_to_apply_changes_to_SkyLight":"Logout è richiesto per applicare le modifiche su SkyLight.",
+    "Downloading:":"Scarico:",
+    "Ready_to_download":"Pronto per scaricare",
+    "There_is_still":"C'è ancora",
+    "center":"Centro",
+    "Failed_to_retrieve_KDK_information:":"Impossibile ricevere info su KDK:",
+    "speed":"Velocità",
+    "Loading":"Carico",
+    "Download_failed":"Download fallito",
+    "Cancel_download":"Cancella download",
+    "at":"a",
+    "The_download_will_be_canceled,are_you_sure?":"Il download verrà cancellato, sei sicuro?",
+    "Downloaded":"Scaricato",
+    "OCLP_resources":"Risorse OCLP",
+    "Available_resources:":"Risorse disponibili:",
+    "Official_Guide":"Guida Ufficiale",
+    "Official_support":"Supporto ufficiale",
+    "Official_Discord_community":"Community Discord ufficiale",
+    "language_support":"Supporto lingue",
+    "SimpleHac_Resource_Community":"SimpleHac Community",
+    "No_patches_needed!Do_you_want_to_reboot_now_to_install_OpenCore?":"Non sono necessarie patch!Vuoi riavviare per installare OpenCore?",
+    "Downloading_KDK":"Scarico KDK",
+    "Metallib_download_failed":"Download Metallib fallito",
+    "Retrieve_the_KDK_database":"Ricevo il database KDK...",
+    "KDK_download_failed:":"Download KDK fallito:",
+    "Installing_Metallib:":"Installo Metallib:",
+    "Metallib_installation_failed:":"Installazione Metallib fallita:",
+    "KDK_MD5_mismatch:":"KDK MD5 conflitto:",
+    "Downloading_Metal_Libraries":"Scarico librerie Metal",
+    "Retrieve_MetallibSupportPkg_database...":"Ricevo database MetallibSupportPkg...",
+    "we_have_just_completed":"Abbiamo completato l'installazione della patch nel volume root!Però, Apple richiede di approvare manualmente le estensioni del kernel installate prima che possand esser usate al prossimo riavvio. Vuoi aprire le Impostazioni di Sistema?",
+    "Open_System_Preferences?":"Vuoi aprire le Impostazioni di Sistema?",
+    "Open_system_settings":"Apri Impostazioni di Sistema",
+    "Ignore":"Ignora",
+    "The_following_patches_will_be_installed:":"Queste patch verranno installate:",
+    "Failed_to_apply_any_patches.":"Impossibile applicare le patch.",
+    "Restore_to_the_most_recent_snapshot":"Reimposta lo snapshot più recente",
+    "Installing_driver_patch":"Installo driver patch",
+    "Uninstalling_driver_patch":"Disinstallo driver patch",
+    "Success":"Fatto",
+    "Guide":"Guida",
+    "System":"Sistema",
     "Qgroup:965625664":"Q Grup: 965625664",
-    "simplehac_laobamac":"SimpleHac[laobamac] modified and translated into\nEnglish, Chinese, and Indonesian by Satria.",
-    "SimpleHac_Resource_Community:www.simplehac.cn":"SimpleHac Resource Community: www.simplehac.cn",
-    "About":"About",
-    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.":"This is an OCLP mod for a high school\nstudent who likes to coo.",
-    "OCLP-Mod_By_laobamac_translated_by_satria_ramadan":"OCLP-Mod By laobamac translated by satria ramadan",
-    "Date":"Date",
-    "Versions":"Versions",
-    "Please_select_a_MetalLib_version_to_download.":"Please select a MetalLib version to download.",
-    "Please_select_a_version_of_MetaLib_to_copy.":"Please select a version of MetaLib to copy.",
-    "Failed_to_retrieve_MetalLib_information:":"Failed to retrieve MetalLib information:",
-    "MetalLib_download":"MetalLib download",
-    "Download_link":"Download link",
-    "Save_the_file":"Save the file",
-    "Retrieving_MetalLib_information...":"Retrieving MetalLib information...",
-    "Download_progress":"Download progress",
-    "Please_select_a_KDK_version_to_download.":"Please select a KDK version to download.",
-    "Please_select_a_KDK_version_to_copy.":"Please select a KDK version to copy.",
-    "The_driver_patch_operation_was_successful!Restart_now?":"The driver patch operation was successful!Restart now?",
-    "the_driver_patch_was_succesfully":"The driver patch operation was successful! If the system prompts you to open 'System Preferences' to authorize new Kexts, you can ignore this. After restarting, your system will be ready.Would you like to restart now?",
-    "advanced":"Advanced"
+    "simplehac_laobamac":"SimpleHac[laobamac] ha modificato e tradotto in\nInglese, Cinese, Indonesiano da Satria, Italiano da Checkm8ra1n.",
+    "SimpleHac_Resource_Community:www.simplehac.cn":"SimpleHac Community: www.simplehac.cn",
+    "About":"Info",
+    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.":"Questa è una mod per OCLP per uno studente delle\nsuperiori che gli piace moddare.",
+    "OCLP-Mod_By_laobamac_translated_by_satria_ramadan":"OCLP-Mod fatto da laobamac tradotto da satria ramadan e Checkm8ra1n",
+    "Date":"Data",
+    "Versions":"Versioni",
+    "Please_select_a_MetalLib_version_to_download.":"Scegli una versione di MetalLib da scaricare.",
+    "Please_select_a_version_of_MetaLib_to_copy.":"Scegli una versione di MetaLib da copiare.",
+    "Failed_to_retrieve_MetalLib_information:":"Impossibile ricevere info MetalLib:",
+    "MetalLib_download":"Scarica MetalLib",
+    "Download_link":"Link Download",
+    "Save_the_file":"Salva file",
+    "Retrieving_MetalLib_information...":"Ricevo info MetalLib...",
+    "Download_progress":"Progresso download:",
+    "Please_select_a_KDK_version_to_download.":"Scegli una versione del KDK da scaricare.",
+    "Please_select_a_KDK_version_to_copy.":"Scegli una versione del KDK da copiare.",
+    "The_driver_patch_operation_was_successful!Restart_now?":"Questa operazione del driver patch è andata a buon fine!Vuoi riavviare?",
+    "the_driver_patch_was_succesfully":"L'operazione del driver patch è andata a buon fine! Se il sistema ti chiede di aprire 'Impostazioni di Sistema' per autorizzare i nuovi Kexts, puoi ignorare uqesto. Dopo aver riavviato, il tuo sistema sarà pronto. Vuoi riavviare?",
+    "advanced":"Avanazato"
 }
